# rekuest-next

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  graphql.config.yaml  pyproject.toml  pytest_output.txt  test.py
.github/workflows/: coverage.yaml  docker-master.yaml  integration.yaml  lint.yaml  pull.yaml  release.yaml  tests.yaml  typecheck.yaml
docs/: README.md  agent-dependencies.md
graphql/fragments/: action.graphql  agent.graphql  assignation.graphql  blok.graphql  dashboard.graphql  datalayer.graphql  dsahboard.graphql  node.graphql  panel.graphql  ports.graphql  provision.graphql  reservation.graphql  shortcut.graphql  state.graphql  state_schema.graphql  task.graphql  template.graphql  test.graphql
graphql/mutations/: agent.graphql  assignation.graphql  blok.graphql  dashboard.graphql  hardware_record.graphql  panel.graphql  reservation.graphql  scene.graphql  shelve.graphql  shortcut.graphql  space.graphql  state.graphql  state_schema.graphql  task.graphql  template.graphql  test.graphql  threed.graphql
graphql/mutations/datalayer/: media.graphql
graphql/queries/: agent.graphql  assignation.graphql  dashboard.graphql  fart.graphql  implementation.graphql  node.graphql  panel.graphql  reservation.graphql  shortcut.graphql  state.graphql  task.graphql  template.graphql  test.graphql  toolbox.graphql
graphql/subscription/: assignation.graphql  provision.graphql  reservation.graphql  task.graphql
rekuest_next/: __init__.py  annotations.py  app.py  arkitekt.py  builtin_structures.py  coercible_types.py  constants.py  datalayer.py  declare.py  define.py  funcs.py  helpers.py  messages.py  protocols.py  rath.py  register.py  rekuest.py  remote.py  scalars.py  structure.py  utils.py  widgets.py
rekuest_next/actors/: __init__.py  actify.py  base.py  context.py  contexts.py  debug.py  errors.py  functional.py  helper.py  sync.py  types.py  vars.py
rekuest_next/actors/reactive/: api.py
rekuest_next/agents/: base.py  caller.py  context.py  dependency.py  errors.py  extension.py  hooks.py  lock.py  pub_sub.py  state_worker.py  utils.py
rekuest_next/annotations/: __init__.py  markers.py  parsers.py
rekuest_next/api/: project.json  schema.graphql  schema.py
rekuest_next/blok/: parser.py  registry.py
rekuest_next/definition/: define.py  demands.py  dependencies.py  hash.py  match.py  registry.py  utils.py  validate.py
rekuest_next/io/: download.py  errors.py  upload.py
rekuest_next/links/: context.py  upload.py
rekuest_next/postmans/: base.py  contract.py  errors.py  graphql.py  types.py  utils.py
rekuest_next/qt/: builders.py
rekuest_next/state/: decorator.py  observable.py  predicate.py  proxies.py  publish.py  registry.py  shrink.py  types.py  utils.py
rekuest_next/structures/: convert.py  decorator.py  default.py  errors.py  model.py  quantities.py  registry.py  types.py
rekuest_next/traits/: action.py  agent.py  blok.py  implementation.py  node.py  ports.py
tests/: __init__.py  annotated_funcs.py  conftest.py  funcs.py  mocks.py  structures.py  test_action_demand_override.py  test_agent_caller.py  test_agent_input_validation.py  test_agent_postman.py  test_agent_runtime_wiring.py  test_annotation.py  test_app_dependencies.py  test_app_memory_structure.py  test_app_run.py  test_app_shutdown.py  test_app_streaming.py  test_auto_register.py  test_blok_overlap.py  test_blok_parser.py  test_class_based.py  test_declare.py  test_decorators.py  test_define_on_backend copy.py  test_define_on_backend.py  test_definition.py  test_definition_registry.py  test_fastapi_agent.py  test_fastapi_api_alignment.py  test_literal_enums.py  test_local_use.py  test_locks.py  test_ports.py  test_postman_cancel.py  test_postman_cancel_integration.py  test_quantity_ports.py  test_reactify.py  test_reactive_api.py  test_registration.py  test_remote_public_docs_behavior.py  (+16 more)
tests/integration/: docker-compose.yaml  docker-compose.yml  utils.py
(+57 files in other folders)
