[project]
name = "rekuest-next"
version = "2.1.1" 
readme = "README.md"
readme-content-type = "text/markdown"
homepage = "https://arkitekt.live"
description = "rpc and node backbone"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11, <4.0"
license = "GPL-3.0-or-later"
dependencies = [
    "docstring-parser>=0.11",
    "inflection>=0.5.1",
    "websockets>=12.0",
    "pydantic>=2",
    "rath>=3.11.1",
    "fieldz>=0.0.2",
    "jsonpatch>=1.33",
    "koil>=3.3.1",
    "janus>=2.0.0",
]

[project.optional-dependencies]
types = [
    "annotated-types>=0.5.0",
]
# Physical-quantity ports (PortKind.QUANTITY): kanne provides the pint-backed
# dimension types used to derive a port's unit/dimension and to expand wire
# strings back into live quantities. Optional — quantity ports simply require it.
units = [
    "kanne>=2.2",
]
# Installed inside the semantic-release Docker action so build_command has uv.
build = ["uv>=0.7.12"]

[tool.uv]
dev-dependencies =  [
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "python-semantic-release>=9.21.0",
    "testcontainers==3.7.0",
    "autoflake>=1.7.7,<2",
    "aiohttp>=3.8.3,<4",
    "black>=23.1.0,<24",
    "pytest-aiohttp>=1.0.4,<2",
    "ruff>0.11",
    "qtpy>=2.4.3",
    "fakts-next>=4",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "dokker>=2.5",
    "turms>=0.11.0",
    "basedpyright>=1.21",
]

[tool.basedpyright]
include = ["rekuest_next"]
exclude = ["**/__pycache__", "tests"]
typeCheckingMode = "standard"

[tool.hatch.build.targets.sdist]
include = ["rekuest_next"]

[tool.hatch.build.targets.wheel]
include = ["rekuest_next"]

[tool.hatch.version]
path = "rekuest_next/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a running server",
    "define: marks tests that concern to definining a funcionality",
    "shrink: marks tests that concern to serializing inputs to requests to an actor",
    "expand: marks tests that concern to serializing outputs from answers of an actor",
    "actor: marks tests that concern actors",
]

testpaths = ["tests"]

[tool.coverage.run]
source = ["rekuest_next"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["arkitekt"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# The semantic-release GitHub Action runs in a Docker container without uv, so
# install it first (the `build` extra). After PSR bumps the version in
# pyproject.toml, re-sync just this package's entry in uv.lock and stage it so
# the release commit carries a consistent lock. $PACKAGE_NAME is injected by PSR.
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_message = "chore(release): v{version} [skip ci]"

# main -> stable X.Y.Z. next -> prereleases X.Y.Z-rc.N. N.x -> maintenance.
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

# Maintenance branches (1.x, 2.x, ...) cut stable patch/minor releases for an
# older major after a new major has shipped from main.
[tool.semantic_release.branches.maintenance]
match = '^\d+\.x$'
prerelease = false

# Keep the changelog focused on user-facing changes. These patterns only filter
# what's rendered — they do not affect version bumps.
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '^chore(?:\([^)]*\))?: ',
    '^ci(?:\([^)]*\))?: ',
    '^build(?:\([^)]*\))?: ',
    '^style(?:\([^)]*\))?: ',
    '^test(?:\([^)]*\))?: ',
    '^Merge ',
]

